--- a/style/scss/layouts/_coursecategory.scss
+++ b/style/scss/layouts/_coursecategory.scss
@@ -47,6 +47,8 @@
         justify-self: center;
         align-self: center;
         grid-area: title;
+        color: $primary;
+        font-size: 1.8rem;
       }
     }
   }
