--- a/templates/theme_boost/footer.mustache
+++ b/templates/theme_boost/footer.mustache
@@ -33,16 +33,16 @@
 }}
 
 <footer id="page-footer" class="footer-popover bg-white">
-    <div class="ddmood-footer">
+    <div class="fos_space1-footer">
         <div class="grid-footer">
             <div class="footer_top">
                 <div class="logo_footer">
                     <img src="{{{logofooter}}}" class="logo">
                 </div>
                 
-                <div class="menu_footer"><a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}PrivacyPolicy, theme_ddmood{{/str}}</a> | <a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}TermsofUse, theme_ddmood{{/str}}</a></div>
+                <div class="menu_footer"><a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}PrivacyPolicy, theme_fos_space1{{/str}}</a> | <a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}TermsofUse, theme_fos_space1{{/str}}</a></div>
             </div>
-            <div class="footer_bottom">{{#str}}textfooter, theme_ddmood{{/str}}</div>
+            <div class="footer_bottom">{{#str}}textfooter, theme_fos_space1{{/str}}</div>
         </div>
         <!--
         <div class="container">
