--- a/templates/coursecategory.mustache
+++ b/templates/coursecategory.mustache
@@ -21,13 +21,13 @@
                 <div class="cta-left">
                     <button class="btn_icon-fos">
                         <div class="icon-blog"></div>
-                        <span>{{#str}}Community, theme_fos_space1{{/str}}</span>
+                        <span><a href="{{{config.wwwroot}}}/mod/forum/view.php?id=2">{{#str}}Community, theme_fos_space1{{/str}}</a></span>
                     </button>
                 </div>
                 <div class="cta-right">
                     <button class="btn_icon-fos">
                         <div class="icon-lab"></div>
-                        <span>{{#str}}KnowledgeSharing, theme_fos_space1{{/str}}</span>
+                        <span><span><a href="{{{config.wwwroot}}}/mod/data/view.php?id=3">{{#str}}KnowledgeSharing, theme_fos_space1{{/str}}</a></span>
                     </button>
                 </div>
             </div>
