--- a/style/moodle.css
+++ b/style/moodle.css
@@ -385,7 +385,7 @@ h5 {
   display: grid;
   grid-template-columns: 1fr;
   max-width: 1281px;
-  margin: 24px auto 50px;
+  margin: 0 auto 50px;
   grid-template-rows: 230px 1fr;
   grid-auto-columns: 1fr;
   gap: 21px 0px;
@@ -518,6 +518,10 @@ h5 {
   color: #5c3873;
   border: 1px solid #5c3873;
   background-color: #f3eff5;
+}
+.btn_icon-fos a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .generaltable thead tr th {
