--- a/style/scss/components/_buttons.scss
+++ b/style/scss/components/_buttons.scss
@@ -1,4 +1,3 @@
-
 .btn_icon-fos {
   display: inline-flex;
   align-items: center;
@@ -13,12 +12,16 @@
 
   .icon-blog,
   .icon-lab {
-      margin-right: 10px;
+    margin-right: 10px;
   }
 
   &:hover {
-      color:$primary;
-      border: 1px solid $primary;
-      background-color: $FOS-Aubergine-bk;
+    color: $primary;
+    border: 1px solid $primary;
+    background-color: $FOS-Aubergine-bk;
+  }
+  a {
+    color: inherit;
+    text-decoration: none;
   }
 }
