--- a/templates/coursecategory.mustache
+++ b/templates/coursecategory.mustache
@@ -27,7 +27,7 @@
                 <div class="cta-right">
                     <button class="btn_icon-fos">
                         <div class="icon-lab"></div>
-                        <span><span><a href="{{{config.wwwroot}}}/mod/data/view.php?id=3">{{#str}}KnowledgeSharing, theme_fos_space1{{/str}}</a></span>
+                        <span><a href="{{{config.wwwroot}}}/mod/data/view.php?id=3">{{#str}}KnowledgeSharing, theme_fos_space1{{/str}}</a></span>
                     </button>
                 </div>
             </div>
