category id dynamic, it is neccessary to add category ID number in the category settings

--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -120,7 +120,7 @@ Example context (json):
                 <div class="container_cat">
                     {{#cohorts.FosFeministaTeam}}
                     <div class="child fos_feminista_team">
-                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid=1">
+                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.FosFeministaTeam}}}">
                             <div class="cat-cta">
                                 <div class="icon">
                                     <img src="{{{i-our_FAT}}}">
@@ -132,7 +132,7 @@ Example context (json):
                     {{/cohorts.FosFeministaTeam}}
                     {{#cohorts.OurFeministAlliance}}
                     <div class="child our_feminist_alliance">
-                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid=2">
+                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.OurFeministAlliance}}}">
                             <div class="cat-cta">
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
@@ -144,7 +144,7 @@ Example context (json):
                     {{/cohorts.OurFeministAlliance}}
                     {{#cohorts.InnovationSocialEnterpriseLab}}
                     <div class="child innovation_social_enterprise_lab">
-                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid=3">
+                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.InnovationSocialEnterpriseLab}}}">
                             <div class="cat-cta">
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
@@ -156,7 +156,7 @@ Example context (json):
                     {{/cohorts.InnovationSocialEnterpriseLab}}
                     {{#cohorts.CenterforEvidenceBasedAdvocacy}}
                     <div class="child center_for_evidence_based_Advocacy">
-                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid=8">
+                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CenterforEvidenceBasedAdvocacy}}}">
                             <div class="cat-cta">
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
@@ -168,7 +168,7 @@ Example context (json):
                     {{/cohorts.CenterforEvidenceBasedAdvocacy}}
                     {{#cohorts.CenterforLegalResponses}}
                     <div class="child center_for_legal_responses">
-                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid=5">
+                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CenterforLegalResponses}}}">
                             <div class="cat-cta">
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
@@ -180,7 +180,7 @@ Example context (json):
                     {{/cohorts.CenterforLegalResponses}}
                     {{#cohorts.CenterForTransformativeNarratives}}
                     <div class="child center_for_transformative_Narratives">
-                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid=4">
+                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CenterForTransformativeNarratives}}}">
                             <div class="cat-cta">
                                 <div class="icon">
                                     <img src="{{{i-CTN}}}">
@@ -192,7 +192,7 @@ Example context (json):
                     {{/cohorts.CenterForTransformativeNarratives}}
                     {{#cohorts.CenterforCSEYouthFriendlyServices}}
                     <div class="child center_for_CSE_youth_friendly_services">
-                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid=9">
+                        <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CenterforCSEYouthFriendlyServices}}}">
                             <div class="cat-cta">
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
