--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -254,7 +254,7 @@ body {
 .navbar-brand::after {
   content: "";
   display: block;
-  background-image: url(".../theme/fos_space1/pix/navbar-logo.png") !important;
+  background-image: url("fos_space1/pix/navbar-logo.png") !important;
   background-size: contain;
   background-repeat: no-repeat;
   width: 44px;
