--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -159,7 +159,7 @@ Example context (json):
                         <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CEBA}}}">
                             <div class="cat-cta">
                                 <div class="icon">
-                                    <img src="{{{i-our_FA}}}">
+                                    <img src="{{{i-CEBA}}}">
                                 </div>
                                 <div class="title_cat">{{#str}}CenterforEvidence-BasedAdvocacy, theme_fos_space1{{/str}}</div>
                             </div>
@@ -171,7 +171,7 @@ Example context (json):
                         <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CLR}}}">
                             <div class="cat-cta">
                                 <div class="icon">
-                                    <img src="{{{i-our_FA}}}">
+                                    <img src="{{{i-CLR}}}">
                                 </div>
                                 <div class="title_cat">{{#str}}CenterforLegalResponses, theme_fos_space1{{/str}}</div>
                             </div>
@@ -195,7 +195,7 @@ Example context (json):
                         <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.CCSE}}}">
                             <div class="cat-cta">
                                 <div class="icon">
-                                    <img src="{{{i-our_FA}}}">
+                                    <img src="{{{i-CCSE}}}">
                                 </div>
                                 <div class="title_cat">{{#str}}CenterforCSE_Youth_FriendlyServices, theme_fos_space1{{/str}}</div>
                             </div>
