frontpage mustache/php icons categories

--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -135,7 +135,7 @@ Example context (json):
                         <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.FA}}}">
                             <div class="cat-cta">
                                 <div class="icon">
-                                    <img src="{{{i-our_FA}}}">
+                                    <img src="{{{i-FA}}}">
                                 </div>
                                 <div class="title_cat">{{#str}}OurFeministAlliance, theme_fos_space1{{/str}}</div>
                             </div>
@@ -147,7 +147,7 @@ Example context (json):
                         <a href="{{{config.wwwroot}}}/course/index.php?categoryid={{{categories.SE}}}">
                             <div class="cat-cta">
                                 <div class="icon">
-                                    <img src="{{{i-ISEL}}}">
+                                    <img src="{{{i-SE}}}">
                                 </div>
                                 <div class="title_cat">{{#str}}Innovation_SocialEnterpriseLab, theme_fos_space1{{/str}}</div>
                             </div>
