--- a/style/scss/layouts/_addentry.scss
+++ b/style/scss/layouts/_addentry.scss
@@ -35,6 +35,16 @@
           "value value"
           "description description";
 
+        .field {
+          grid-area: field;
+
+          h6 {
+            margin-left: 24px;
+            font-size: 12px;
+            color: $primary;
+          }
+        }
+
         .cta {
           align-self: center;
           grid-area: cta;
@@ -54,26 +64,20 @@
           }
         }
 
-        .description {
-          grid-area: description;
-          display: none;
-        }
-
-        .field {
-          grid-area: field;
-
-          h6 {
-            font-size: 12px;
-            color: $primary;
-          }
-        }
-
         .value {
           grid-area: value;
 
           input {
-            width: 95% !important;
+            width: calc(100% - 24px) !important;
           }
+        }
+
+        .description {
+          grid-area: description;
+          display: none;
+          background-color: $navbar-bg;
+          color: $primary;
+          padding-left: 24px;
         }
       }
 
@@ -150,6 +154,16 @@
         "value value"
         "description description";
 
+      .field {
+        grid-area: field;
+
+        h6 {
+          margin-left: 24px;
+          font-size: 12px;
+          color: $primary;
+        }
+      }
+
       .cta {
         align-self: center;
         grid-area: cta;
@@ -172,15 +186,9 @@
       .description {
         grid-area: description;
         display: none;
-      }
-
-      .field {
-        grid-area: field;
-
-        h6 {
-          font-size: 12px;
-          color: $primary;
-        }
+        background-color: $navbar-bg;
+        color: $primary;
+        padding-left: 24px;
       }
 
       .value {
