--- a/style/moodle.css
+++ b/style/moodle.css
@@ -1324,6 +1324,13 @@ h5 {
   height: 50px;
 }
 
+.limit-text {
+  width: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .navbar.fixed-top {
   padding-top: 0;
   padding-bottom: 0;
